	* arch/arm/src/stm32l4 and include/stm32l4:  Add support for the STM32L4
	  family.  From Sebastien Lorquet (2016-03-10).
	* configs/nucleo-l476:  Add support for the Nucleo-L476 board.  From
	  Sebastien Lorquet (2016-03-10).
	* sched/tls and include/nuttx/tls.h:  Basic definitions needed to support
	  thread local storage (TLS).  Not used anywhere yet (and may not be used
	  in the near future either) (2016-03-10).
	* sched/sched_note.c and include/nuttx/sched_note.c:  Add a configuration
	  option to buffer RTOS instrumentation data in an in-memory buffer
	  (2016-03-17).
	* drivers/syslog/note_driver.c:  Add a character driver that will allow
	  an application to read buffered scheduler instrumentation data (2016-03-17).
	* arch/arm/src/samv7/sam_usbdevhs.c:  The USB driver has had some issue that
	  would occasionally cause loss of packets.  Back last December, a fix was
	  put in for this but the fix apparently worsens the problem; now causing
	  hangs.  The basic problem is that the number of busy banks (NBUSYBKS)
	  status is not real time but is delayed.  This was fixed; now when the DMA
	  completes and NBUSYBKS > 0, the NBUSYBK is interrupt is enabled and the
	  operations are deferred until NBUSYBKS is truly zero (2016-03-17).
	* net/tcp/tcp_timer.c:  Fix some logic when there are multiple network
	  interfaces.  In this case, TCP timeout events can really only being
	  processed when the poll from the correct device is received (2016-03-20).
	* sched/wqueue/kwork_signal.c:  Fix logic to find an IDLE worker thread;
	  the test for busy was backward.  From Linfei Chen (2016-03-22).
	* include/sys/boardctl.h, configs/boardctl.c, and many configurations:  Add
	  boardctl() support that will permit applications to control USB devices
	  (2016-03-25).
	* configs/stm32l476vg-disco: Add support for the STM32L476VG Discovery
	  board.  From Dave (2016-03-25).

7.16 2016-xx-xx Gregory Nutt <gnutt@nuttx.org>